--- a/pokemon_game.html
+++ b/pokemon_game.html
@@ -8,10 +8,10 @@
 	<script src = "pokemon_game.js"></script>
 	<title>Pokemon Battle</title>
 </head>
-<div class = "game screen">
-	<div class = "enemy">
+<!--div class = "game_screen"-->
+	<!--div class = "enemy"-->
 <body>
-	<div class = "game screen">
+	<div class = "game_screen">
 		<div class = "enemy">
 			<div class = "stats">
 				<div class = "top">
@@ -22,10 +22,10 @@
 						<div class = "pokeball"></div>
 						<div class = "pokeball"></div>
 					</div>
-						<div id = "their_HP" class = "hp">100</div>
+						<div id = "their_HP" class = "hp">300</div>
 					</div>
 					<span class = "name"> Pikachu </span> <!--idk what pokemon to use lol-->
-					<span class = "level"> 25 </span>
+					<span class = "level"> 100 </span>
 				</div>
 				<img class = "pokemon" src = "https://img.pokemondb.net/sprites/black-white/anim/normal/pikachu.gif" alt = "Pikachu sprite" />
 			</div>
@@ -39,10 +39,10 @@
 							<div class = "pokeball"></div>
 							<div class = "pokeball"></div>
 						</div>
-							<div id = "my_HP" class = "hp">100</div>
+							<div id = "my_HP" class = "hp">300</div>
 						</div>
 						<span class = "name"> Prinplup </span>
-						<span class = "level"> 25 </span>
+						<span class = "level"> 100 </span>
 					</div>
 					<img class = "pokemon" src = "https://img.pokemondb.net/sprites/black-white/anim/back-normal/prinplup.gif" />
 				</div>
