--- a/pokemon_game.html
+++ b/pokemon_game.html
@@ -41,15 +41,15 @@
 						</div>
 							<div id = "my_HP" class = "hp">300</div>
 						</div>
-						<span class = "name"> Prinplup </span>
+						<span class = "name"> Mudkip </span>
 						<span class = "level"> 100 </span>
 					</div>
-					<img class = "pokemon" src = "https://img.pokemondb.net/sprites/black-white/anim/back-normal/prinplup.gif" />
+					<img class = "pokemon" src = "https://img.pokemondb.net/sprites/black-white/anim/back-normal/mudkip.gif" />
 				</div>
 			</div>
 			<div class = "box">
 				<div id = "message" class = "message"> 
-					<p>What should PRINPLUP do?</p>
+					<p>What should MUDKIP do?</p>
 				</div>
 				<div class = "attacks">
 					<button onclick = "bubble_beam()">Bubble Beam</button>
