--- a/pokemon_game.html
+++ b/pokemon_game.html
@@ -52,10 +52,10 @@
 					<p>What should MUDKIP do?</p>
 				</div>
 				<div class = "attacks">
-					<button onclick = "bubble_beam()">Bubble Beam</button>
-					<button onclick = "water_pulse()">Water Pulse</button>
-					<button onclick = "steel_claw()">Steel Claw</button>
-					<button onclick = "tackle()">Tackle</button>
+					<button onclick = "ice_beam()">Ice Beam</button>
+					<button onclick = "surf()">Surf</button>
+					<button onclick = "earthquake()">Earthquake</button>
+					<button onclick = "waterfall()">Waterfall</button>
 				</div>
 				<div class = "continue">
 					<button onclick = "comp_pokemon()">Continue</button>
