added alt for mudkip

--- a/pokemon_game.html
+++ b/pokemon_game.html
@@ -44,7 +44,7 @@
 						<span class = "name"> Mudkip </span>
 						<span class = "level"> 100 </span>
 					</div>
-					<img class = "pokemon" src = "https://img.pokemondb.net/sprites/black-white/anim/back-normal/mudkip.gif" />
+					<img class = "pokemon" src = "https://img.pokemondb.net/sprites/black-white/anim/back-normal/mudkip.gif" alt = "mudkip sprite" />
 				</div>
 			</div>
 			<div class = "box">
