added background music

--- a/pokemon_game.html
+++ b/pokemon_game.html
@@ -10,7 +10,7 @@
 </head>
 <!--div class = "game_screen"-->
 	<!--div class = "enemy"-->
-<body>
+<body onload = "startGame()">
 	<div class = "game_screen">
 		<div class = "enemy">
 			<div class = "stats">
