changes to css [WIP]

--- a/pokemon_game.html
+++ b/pokemon_game.html
@@ -45,8 +45,8 @@
 				</div>
 			</div>
 			<div class = "box">
-				<div id = "message" class = "message"> 
-					<p>What should MUDKIP do?</p>
+				<div class = "message"> 
+					<span id = "message"> <p>What should MUDKIP do?</p> </span>
 				</div>
 				<div class = "attacks">
 					<button onclick = "ice_beam()">Ice Beam</button>
