--- a/lose_page.html
+++ b/lose_page.html
@@ -7,7 +7,7 @@
 <body>
 	<div class = "game_screen">
 		<div class = "message">
-			<p>GAME OVER!</p>
+			<p>YOU LOSE!</p>
 			<p>Play Again?</p>
 		</div>
 		<div class = "yes">
